# UnikeyEngineNix

./: .gitignore  CHANGELOG.md  CMakeLists.txt  COPYING  README.md
src/: CMakeLists.txt  byteio.cpp  byteio.h  charset.cpp  charset.h  convert.cpp  data.cpp  data.h  error.cpp  inputproc.cpp  inputproc.h  keycons.h  mactab.cpp  mactab.h  pattern.cpp  pattern.h  tim_playing.cpp  ukengine.cpp  ukengine.h  unikey.cpp  unikey.h  usrkeymap.cpp  usrkeymap.h  vnconv.h  vnlexi.h
test/: playing.cpp  unikey_test.cpp
