# Add files are compiled into a library named unikey-engine
add_library (unikey-engine
  byteio.cpp
  charset.cpp
  convert.cpp
  data.cpp
  error.cpp
  inputproc.cpp
  mactab.cpp
  pattern.cpp
  ukengine.cpp
  unikey.cpp
  usrkeymap.cpp
  byteio.h
  charset.h
  data.h
  inputproc.h
  keycons.h
  mactab.h
  pattern.h
  ukengine.h
  unikey.h
  usrkeymap.h
  vnconv.h
  vnlexi.h)
